package upgrade

import (
	"context"
	"fmt"
	"sync"
	"time"

	"github.com/containerd/nerdctl-grpc-server/internal/adapters/factory"
	"github.com/containerd/nerdctl-grpc-server/internal/config"
	"github.com/containerd/nerdctl-grpc-server/internal/compatibility"
	"github.com/containerd/nerdctl-grpc-server/internal/interfaces"
)

// UpgradeManager handles hot updates and version migration for nerdctl adapters
type UpgradeManager struct {
	factory         *factory.AdapterFactory
	detector        compatibility.Detector
	config          *config.Config
	currentAdapter  interfaces.Adapter
	upgradePolicy   *UpgradePolicy
	migrationQueue  chan *MigrationTask
	shutdownChannel chan struct{}
	mutex           sync.RWMutex
	isRunning       bool
}

// UpgradePolicy defines when and how upgrades should be performed
type UpgradePolicy struct {
	// AutoUpgrade enables automatic version detection and upgrade
	AutoUpgrade bool `json:"auto_upgrade" yaml:"auto_upgrade"`
	
	// CheckInterval defines how often to check for new versions
	CheckInterval time.Duration `json:"check_interval" yaml:"check_interval"`
	
	// UpgradeStrategy defines upgrade behavior: "immediate", "graceful", "scheduled"
	UpgradeStrategy string `json:"upgrade_strategy" yaml:"upgrade_strategy"`
	
	// GracefulTimeout is the timeout for graceful shutdown during upgrade
	GracefulTimeout time.Duration `json:"graceful_timeout" yaml:"graceful_timeout"`
	
	// RollbackOnFailure enables automatic rollback on upgrade failure
	RollbackOnFailure bool `json:"rollback_on_failure" yaml:"rollback_on_failure"`
	
	// VersionConstraints defines allowed version ranges
	VersionConstraints map[string]string `json:"version_constraints" yaml:"version_constraints"`
}

// MigrationTask represents a version migration operation
type MigrationTask struct {
	FromVersion string
	ToVersion   string
	Strategy    string
	Timestamp   time.Time
	Context     context.Context
	ResultChan  chan *MigrationResult
}

// MigrationResult contains the outcome of a migration operation
type MigrationResult struct {
	Success        bool
	NewAdapter     interfaces.Adapter
	Error          error
	MigrationTime  time.Duration
	RollbackNeeded bool
}

// VersionState tracks the current version state
type VersionState struct {
	CurrentVersion     string    `json:"current_version"`
	TargetVersion      string    `json:"target_version,omitempty"`
	LastCheck          time.Time `json:"last_check"`
	LastUpgrade        time.Time `json:"last_upgrade,omitempty"`
	UpgradeInProgress  bool      `json:"upgrade_in_progress"`
	RollbackAvailable  bool      `json:"rollback_available"`
	PreviousVersion    string    `json:"previous_version,omitempty"`
}

// NewUpgradeManager creates a new upgrade manager
func NewUpgradeManager(factory *factory.AdapterFactory, detector compatibility.Detector, config *config.Config) *UpgradeManager {
	policy := &UpgradePolicy{
		AutoUpgrade:        config.AutoUpgrade,
		CheckInterval:      config.UpgradeCheckInterval,
		UpgradeStrategy:    config.UpgradeStrategy,
		GracefulTimeout:    config.GracefulTimeout,
		RollbackOnFailure:  config.RollbackOnFailure,
		VersionConstraints: config.VersionConstraints,
	}

	return &UpgradeManager{
		factory:         factory,
		detector:        detector,
		config:          config,
		upgradePolicy:   policy,
		migrationQueue:  make(chan *MigrationTask, 10),
		shutdownChannel: make(chan struct{}),
	}
}

// Start begins the upgrade manager's monitoring loop
func (um *UpgradeManager) Start(ctx context.Context) error {
	um.mutex.Lock()
	defer um.mutex.Unlock()

	if um.isRunning {
		return fmt.Errorf("upgrade manager is already running")
	}

	// Initialize with current adapter
	adapter, err := um.factory.CreateAdapter(ctx)
	if err != nil {
		return fmt.Errorf("failed to initialize adapter: %w", err)
	}
	um.currentAdapter = adapter

	um.isRunning = true
	
	// Start monitoring goroutine
	go um.monitoringLoop(ctx)
	
	// Start migration worker
	go um.migrationWorker(ctx)

	return nil
}

// Stop gracefully shuts down the upgrade manager
func (um *UpgradeManager) Stop() error {
	um.mutex.Lock()
	defer um.mutex.Unlock()

	if !um.isRunning {
		return nil
	}

	close(um.shutdownChannel)
	um.isRunning = false
	return nil
}

// GetCurrentAdapter returns the current adapter instance
func (um *UpgradeManager) GetCurrentAdapter() interfaces.Adapter {
	um.mutex.RLock()
	defer um.mutex.RUnlock()
	return um.currentAdapter
}

// GetVersionState returns current version state information
func (um *UpgradeManager) GetVersionState() *VersionState {
	um.mutex.RLock()
	defer um.mutex.RUnlock()

	// Get version from current adapter (implementation dependent)
	currentVersion := um.detectCurrentVersion()

	return &VersionState{
		CurrentVersion:    currentVersion,
		LastCheck:         time.Now(),
		UpgradeInProgress: false, // TODO: implement proper tracking
		RollbackAvailable: um.canRollback(),
	}
}

// TriggerUpgrade manually triggers an upgrade check and execution
func (um *UpgradeManager) TriggerUpgrade(ctx context.Context) error {
	if !um.isRunning {
		return fmt.Errorf("upgrade manager is not running")
	}

	// Check for new versions
	newVersion, available, err := um.checkForUpdates(ctx)
	if err != nil {
		return fmt.Errorf("failed to check for updates: %w", err)
	}

	if !available {
		return fmt.Errorf("no new version available")
	}

	// Create migration task
	task := &MigrationTask{
		FromVersion: um.detectCurrentVersion(),
		ToVersion:   newVersion,
		Strategy:    um.upgradePolicy.UpgradeStrategy,
		Timestamp:   time.Now(),
		Context:     ctx,
		ResultChan:  make(chan *MigrationResult, 1),
	}

	// Queue migration
	select {
	case um.migrationQueue <- task:
		// Wait for result
		result := <-task.ResultChan
		if !result.Success {
			return fmt.Errorf("upgrade failed: %w", result.Error)
		}
		return nil
	case <-ctx.Done():
		return ctx.Err()
	}
}

// RollbackToPrevious rolls back to the previous version
func (um *UpgradeManager) RollbackToPrevious(ctx context.Context) error {
	um.mutex.RLock()
	canRollback := um.canRollback()
	um.mutex.RUnlock()

	if !canRollback {
		return fmt.Errorf("rollback not available")
	}

	// Implementation would restore previous adapter configuration
	// For now, this is a placeholder
	return fmt.Errorf("rollback functionality not yet implemented")
}

// Internal monitoring loop
func (um *UpgradeManager) monitoringLoop(ctx context.Context) {
	ticker := time.NewTicker(um.upgradePolicy.CheckInterval)
	defer ticker.Stop()

	for {
		select {
		case <-ticker.C:
			if um.upgradePolicy.AutoUpgrade {
				um.checkAndUpgrade(ctx)
			}
		case <-um.shutdownChannel:
			return
		case <-ctx.Done():
			return
		}
	}
}

// Migration worker processes migration tasks
func (um *UpgradeManager) migrationWorker(ctx context.Context) {
	for {
		select {
		case task := <-um.migrationQueue:
			result := um.executeMigration(task)
			task.ResultChan <- result
		case <-um.shutdownChannel:
			return
		case <-ctx.Done():
			return
		}
	}
}

// Check for updates and trigger upgrade if needed
func (um *UpgradeManager) checkAndUpgrade(ctx context.Context) {
	newVersion, available, err := um.checkForUpdates(ctx)
	if err != nil || !available {
		return
	}

	// Create and queue migration task
	task := &MigrationTask{
		FromVersion: um.detectCurrentVersion(),
		ToVersion:   newVersion,
		Strategy:    um.upgradePolicy.UpgradeStrategy,
		Timestamp:   time.Now(),
		Context:     ctx,
		ResultChan:  make(chan *MigrationResult, 1),
	}

	select {
	case um.migrationQueue <- task:
		// Process asynchronously
	default:
		// Queue is full, skip this upgrade cycle
	}
}

// Check for available updates
func (um *UpgradeManager) checkForUpdates(ctx context.Context) (string, bool, error) {
	// Detect current version
	versionInfo, err := um.detector.DetectVersion(ctx, um.config.NerdctlPath)
	if err != nil {
		return "", false, err
	}

	// Check if this is a newer version than current
	currentVersion := um.detectCurrentVersion()
	if isNewerVersion(versionInfo.Version, currentVersion) {
		// Validate against version constraints
		if um.isVersionAllowed(versionInfo.Version) {
			return versionInfo.Version, true, nil
		}
	}

	return "", false, nil
}

// Execute a migration task
func (um *UpgradeManager) executeMigration(task *MigrationTask) *MigrationResult {
	startTime := time.Now()
	
	result := &MigrationResult{
		MigrationTime: time.Since(startTime),
	}

	// Validate migration
	if !um.isValidMigration(task.FromVersion, task.ToVersion) {
		result.Error = fmt.Errorf("invalid migration from %s to %s", task.FromVersion, task.ToVersion)
		return result
	}

	// Execute migration based on strategy
	switch task.Strategy {
	case "immediate":
		result = um.executeImmediateMigration(task)
	case "graceful":
		result = um.executeGracefulMigration(task)
	case "scheduled":
		result = um.executeScheduledMigration(task)
	default:
		result.Error = fmt.Errorf("unknown migration strategy: %s", task.Strategy)
	}

	result.MigrationTime = time.Since(startTime)

	// Handle rollback if needed
	if !result.Success && um.upgradePolicy.RollbackOnFailure {
		result.RollbackNeeded = true
		um.executeRollback()
	}

	return result
}

// Execute immediate migration (hot swap)
func (um *UpgradeManager) executeImmediateMigration(task *MigrationTask) *MigrationResult {
	// Update configuration with new version
	newConfig := *um.config
	newConfig.PreferredVersion = task.ToVersion

	// Create new adapter factory with updated config
	newFactory := factory.NewAdapterFactory(um.detector, &newConfig)
	
	// Create new adapter
	newAdapter, err := newFactory.CreateAdapter(task.Context)
	if err != nil {
		return &MigrationResult{
			Success: false,
			Error:   fmt.Errorf("failed to create new adapter: %w", err),
		}
	}

	// Atomic swap
	um.mutex.Lock()
	oldAdapter := um.currentAdapter
	um.currentAdapter = newAdapter
	um.factory = newFactory
	um.mutex.Unlock()

	// Cleanup old adapter (if needed)
	um.cleanupAdapter(oldAdapter)

	return &MigrationResult{
		Success:    true,
		NewAdapter: newAdapter,
	}
}

// Execute graceful migration (drain connections)
func (um *UpgradeManager) executeGracefulMigration(task *MigrationTask) *MigrationResult {
	// Create new adapter first
	newConfig := *um.config
	newConfig.PreferredVersion = task.ToVersion

	newFactory := factory.NewAdapterFactory(um.detector, &newConfig)
	newAdapter, err := newFactory.CreateAdapter(task.Context)
	if err != nil {
		return &MigrationResult{
			Success: false,
			Error:   fmt.Errorf("failed to create new adapter: %w", err),
		}
	}

	// Wait for graceful timeout or context cancellation
	gracefulCtx, cancel := context.WithTimeout(task.Context, um.upgradePolicy.GracefulTimeout)
	defer cancel()

	// TODO: Implement connection draining
	select {
	case <-gracefulCtx.Done():
		// Timeout reached, proceed with migration
	case <-task.Context.Done():
		return &MigrationResult{
			Success: false,
			Error:   task.Context.Err(),
		}
	}

	// Perform the swap
	um.mutex.Lock()
	oldAdapter := um.currentAdapter
	um.currentAdapter = newAdapter
	um.factory = newFactory
	um.mutex.Unlock()

	um.cleanupAdapter(oldAdapter)

	return &MigrationResult{
		Success:    true,
		NewAdapter: newAdapter,
	}
}

// Execute scheduled migration (future implementation)
func (um *UpgradeManager) executeScheduledMigration(task *MigrationTask) *MigrationResult {
	// Placeholder for scheduled migration logic
	return &MigrationResult{
		Success: false,
		Error:   fmt.Errorf("scheduled migration not yet implemented"),
	}
}

// Helper functions

func (um *UpgradeManager) detectCurrentVersion() string {
	// This would extract version from current adapter
	// For now, return a placeholder
	return "current"
}

func (um *UpgradeManager) canRollback() bool {
	// Check if rollback is possible
	return false // Placeholder
}

func (um *UpgradeManager) isVersionAllowed(version string) bool {
	// Check against version constraints
	if um.upgradePolicy.VersionConstraints == nil {
		return true
	}
	
	// Implement constraint checking
	return true // Placeholder
}

func (um *UpgradeManager) isValidMigration(from, to string) bool {
	// Validate migration path
	return from != to
}

func (um *UpgradeManager) executeRollback() error {
	// Implement rollback logic
	return fmt.Errorf("rollback not implemented")
}

func (um *UpgradeManager) cleanupAdapter(adapter interfaces.Adapter) {
	// Cleanup resources associated with old adapter
	// This is adapter-specific
}

// Version comparison utility
func isNewerVersion(candidate, current string) bool {
	// Simple version comparison
	// In a real implementation, use semantic versioning
	return candidate != current
}